--- a/public/404.html
+++ b/public/404.html
@@ -4,7 +4,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <link rel="stylesheet" media="screen" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" />
-    <link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Barlow:300" rel="stylesheet">
     <link rel="stylesheet" media="screen" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
      <meta charset="UTF-8">
 
@@ -78,6 +78,7 @@
     background-color:#6355bc;
     padding:0 5%;
     position:relative;
+    font-weight: 300;
   }
 
   .plain.error-page-wrapper .content-container {
@@ -93,8 +94,11 @@
   }
 
   .plain.error-page-wrapper .content-container.in {
-    left: 0px;
+    margin-left: auto;
+    top: 108px;
+    margin-right: auto;
     opacity:1;
+    text-align: center;
   }
 
   .plain.error-page-wrapper .head-line {
@@ -109,13 +113,15 @@
     transition: color .2s linear;
     font-size:36px;
     line-height:46px;
+    position :relative;
+    right: 20px;
     color:#fff;
   }
   .plain.error-page-wrapper hr {
     height:1px;
     background-color: rgba(255,255,255,.2);
     border:none;
-    width:250px;
+    width:400px;
     margin:35px 0;
   }
   .plain.error-page-wrapper .context {
@@ -132,27 +138,24 @@
   }
   .plain.error-page-wrapper .buttons-container {
     display: flex;
-    margin-top: 45px;
-    overflow: hidden;
+    margin-top: 55px;
+    justify-content: space-around;
   }
   .plain.error-page-wrapper .buttons-container a {
     transition: color .2s linear, border-color .2s linear;
     font-size:14px;
+    max-width: 180px;
     text-transform: uppercase;
     text-decoration: none;
     color:#fff;
     border:2px solid white;
-    border-radius: 99px;
-    padding:8px 30px 9px;
+    border-radius: 4px;
+    padding:8px 20px 9px;
     display: inline-block;
-    float:left;
     text-align: center;
   }
   .plain.error-page-wrapper .buttons-container a:hover {
     background-color:rgba(255,255,255,.05);
-  }
-  .plain.error-page-wrapper .buttons-container a:first-child {
-    margin-right:25px;
   }
 
   @media screen and (max-width: 485px) {
@@ -181,9 +184,6 @@
       padding:8px 0 7px;
       width:45%;
       text-align: center;
-    }
-    .plain.error-page-wrapper .buttons-container a:first-child {
-      margin-right:10%;
     }
   }
 </style>
